@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-01T16:14:15Z",
-  "count_outdated" : 371,
-  "uniques_outdated" : 16,
-  "count" : 385,
+  "timestamp" : "2022-06-02T00:54:24Z",
+  "count_outdated" : 385,
+  "uniques_outdated" : 17,
+  "count" : 398,
   "uniques" : 22,
   "views" : [
-    {
-      "timestamp": "2022-05-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 14 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-19T00:00:00Z",
       "count": 4,
