@@ -1,3 +1,10 @@
+2022-06-02T00:54:24Z:
+* notice: last 14d: unq all: 1 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 16 371 / 22 385
+* notice: next accum: outdated-unq outdated-all / unq all: 17 385 / 22 398
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-05-18] / []
+
 2022-06-01T16:14:15Z:
 * notice: last 14d: unq all: 1 14
 * notice: prev accum: outdated-unq outdated-all / unq all: 16 371 / 22 392
